# RnnoiseAndroidPlugin

./: .gitignore  CMakeLists.txt  README.MD  go.mod  go.sum  make.sh  make_android.sh  make_linux.sh  make_unix.sh  make_windows.sh  rnnoise.go  rnnoise_pkgconfig.go  rnnoise_static.go
example/: build_android.sh  main.go
